<resources>
    <string name="app_name">MyToDo</string>
    <string name="titolo_hint">Titolo</string>
    <string name="nota_hint">Nota</string>
    <string name="data_ultima_modifica">Ultima Modifica:</string>
    <string name="salva">Salva</string>
    <string name="cancel_ok">Nota eliminata</string>
    <string name="annulla">Annulla</string>
    <string name="modifica">Modifica</string>
    <string name="select_items">Note Selezionate</string>
    <string name="elimina">Elimina</string>
    <string name="cancels_ok">Note Eliminate</string>
    <string name="colore">Cambia Colore</string>
    <string name="speciale">Speciale</string>
</resources>
