<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_special"
        android:icon="@drawable/ic_pin_vector_24dp"
        android:orderInCategory="99"
        android:title="@string/speciale"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:orderInCategory="100"
        android:title="@string/colore"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="101"
        android:title="@string/elimina"
        app:showAsAction="always" />
</menu>